examples/test/testpolicy13343.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13343
  namespace: namespace409
spec:
  podSelector:
    matchLabels:
      key19: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value18
      podSelector:
        matchLabels:
          key8: value27
          key32: value12
          key15: value37
